feat(api/dto): create dtos parameters